<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".resolution.ui.MainActivity">
    <RelativeLayout
            android:layout_toStartOf="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:textSize="18sp"
                android:padding="5dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/InfoTitle"
                android:layout_alignParentTop="true"
                android:id="@+id/InfoTitle"
                android:textColor="@android:color/white"/>
        <TextView
                android:textColor="@android:color/darker_gray"
                android:background="@android:color/white"
                android:id="@+id/messageDate"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/InfoTitle"/>
        <TextView
                android:padding="5dp"
                android:gravity="center"
                android:id="@+id/Information"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/messageDate"/>
        <LinearLayout
                android:id="@+id/listLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/Information"
                android:orientation="horizontal">
            <LinearLayout
                    android:layout_weight="50"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                <TextView
                        android:textSize="20sp"
                        android:padding="5dp"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:background="@color/colorPrimary"
                        android:id="@+id/ResolutionTitleList"
                        android:text="@string/ResolutionListTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <android.support.v7.widget.RecyclerView
                        app:layoutManager="LinearLayoutManager"
                        android:id="@+id/resolutionList"
                        android:layout_width="match_parent"
                        android:layout_height="284dp"
                        tools:listitem="@layout/resolution_list_item">

                </android.support.v7.widget.RecyclerView>
            </LinearLayout>
            <RelativeLayout
                    android:layout_gravity="center"
                    android:layout_weight="50"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                <TextView
                        android:textSize="20sp"
                        android:padding="5dp"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:id="@+id/ResolutionResultTitleList"
                        android:background="@color/colorPrimary"
                        android:text="@string/ResourceResultListTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <android.support.v7.widget.RecyclerView
                        android:layout_below="@+id/ResolutionResultTitleList"
                        app:layoutManager="LinearLayoutManager"
                        android:id="@+id/resolutionResultList"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:listitem="@layout/resolution_list_item">
                </android.support.v7.widget.RecyclerView>
                <LinearLayout
                        android:gravity="center"
                        android:layout_above="@+id/resolutionResultList"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <com.victor.loading.rotate.RotateLoading
                            android:id="@+id/rotateLoadingLoadNext"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            app:loading_width="5dp"
                            app:loading_color="@color/colorPrimary"
                            android:visibility="gone"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
    <com.victor.loading.rotate.RotateLoading
            android:id="@+id/rotateLoading"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:loading_width="5dp"
            app:loading_color="@color/colorPrimary"
            android:layout_centerInParent="true"/>
    <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_alignParentEnd="true"
            android:background="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
        <ImageView
                android:background="@color/colorPrimary"
                android:layout_width="2dp"
                android:layout_height="match_parent"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:background="@android:color/white"
                android:layout_width="80dp"
                android:layout_height="wrap_content">
            <Button
                    android:visibility="visible"
                    android:drawableBottom="@drawable/ic_send"
                    android:id="@+id/sendMessage"
                    android:layout_weight="1"
                    android:textSize="10sp"
                    android:background="@android:color/white"
                    android:padding="5dp"
                    style="?android:attr/borderlessButtonStyle"
                    android:text="@string/sendMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"/>
            <Button
                    android:drawableBottom="@drawable/ic_exit"
                    android:id="@+id/logOut"
                    android:padding="5dp"
                    android:background="@android:color/white"
                    android:textSize="10sp"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_weight="1"
                    android:text="@string/logOut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"/>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
            android:visibility="gone"
            android:id="@+id/confirmLayout"
            android:background="#BB000000"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:background="@android:color/white"
                android:paddingRight="50dp"
                android:paddingLeft="50dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true">
            <EditText
                    android:id="@+id/messageEditText"
                    android:layout_gravity="center"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <Button
                        android:layout_gravity="center"
                        android:drawableBottom="@drawable/ic_yes"
                        android:id="@+id/confirmButton"
                        android:padding="5dp"
                        android:text="@string/confirm"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <Button
                        android:layout_gravity="center"
                        android:drawableBottom="@drawable/ic_no"
                        android:id="@+id/denyButton"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/deny"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>