<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".vote.ui.VoteActivity">
<LinearLayout
        android:layout_toStartOf="@+id/buttonLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
            android:orientation="vertical"
            android:id="@+id/titleLayout"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:padding="5dp"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:id="@+id/resolutionTitleTextView"/>
        <TextView
                android:id="@+id/vote_layout_date"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceListItem"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
            android:id="@+id/voteList"
            app:layoutManager="LinearLayoutManager"
            tools:listitem="@layout/vote_list_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>
</LinearLayout>
    <com.victor.loading.rotate.RotateLoading
            android:id="@+id/rotateLoading"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:loading_width="5dp"
            app:loading_color="@color/colorPrimary"
            android:layout_centerInParent="true"/>
    <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_alignParentEnd="true"
            android:background="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
        <ImageView
                android:background="@color/colorPrimary"
                android:layout_width="2dp"
                android:layout_height="match_parent"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:background="@android:color/white"
                android:layout_width="70dp"
                android:layout_height="wrap_content">
            <Button
                    android:drawableBottom="@drawable/ic_send"
                    android:id="@+id/sendVote"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:background="@android:color/white"
                    android:padding="5dp"
                    style="?android:attr/borderlessButtonStyle"
                    android:text="@string/send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"/>
            <Button
                    android:drawableBottom="@drawable/ic_exit"
                    android:id="@+id/exitButton"
                    android:padding="5dp"
                    android:background="@android:color/white"
                    android:textSize="12sp"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_weight="1"
                    android:text="@string/exit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"/>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
            android:visibility="gone"
            android:id="@+id/confirmLayout"
            android:background="#BB000000"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:background="@android:color/white"
                android:paddingRight="50dp"
                android:paddingLeft="50dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true">
            <Button
                    android:layout_gravity="center"
                    android:drawableBottom="@drawable/ic_yes"
                    android:id="@+id/confirmButton"
                    android:padding="5dp"
                    android:text="@string/confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <Button
                    android:layout_gravity="center"
                    android:drawableBottom="@drawable/ic_no"
                    android:id="@+id/denyButton"
                    android:padding="5dp"
                    android:text="@string/deny"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>